# korean-it-recruitment-alert

./: .env.example  .gitattributes  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: docker-push.yml
src/: main.rs
src/database/: mod.rs
src/jobkorea/: data_extraction.rs  fetch.rs  jobkorea.rs  jobkorea_job_list_for_test.html  mod.rs
src/posting/mastodon/: mod.rs
src/saramin/: data.rs  data_extraction.rs  fetch.rs  mod.rs  parse.rs  saramin.rs  saramin_job_list_for_test.html  save_progress.rs  struct.rs  web.rs
