[package]
name = "korean-it-recruitment-alert"
version = "0.1.0"
authors = ["vallisneria <moogi3469@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
select = "0.5"
postgres = "0.19"
