[package]
name = "korean-it-recruitment-alert"
version = "0.1.0"
authors = ["vallisneria <moogi3469@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip"] }
scraper = "0.12"
tokio = { version = "1.8.0", features = ["full"] }
